--- a/HideAdminUI.css
+++ b/HideAdminUI.css
@@ -2,8 +2,8 @@
 ################################################
 CSS for for Typesetter CMS addon 'Hide Admin UI'
 Author: J. Krausz
-Date: 2018-01-14
-Version 1.0
+Date: 2018-01-15
+Version 1.1
 ################################################
 */
 
@@ -31,62 +31,69 @@ html.override_admin_style .gp-fixed-adjust {
   margin-top:0!important;
 }
 
-/* THEME CAJON */
+/* Theme Cajon Navbar */
 html.override_admin_style nav.navbar-theme-cajon {
   left:0!important;
 }
 
-/* Indicator */
-div.hidden-admin-ui-indicator {
+/* Reduce Admin Content Panel Paddings */
+#admincontent_panel span, #admincontent_panel a {
+  padding:8px 10px;
+}
+
+/* Hide UI icon */
+#admincontent_panel li.hide-admin-ui a {
+  padding:8px;
+}
+#admincontent_panel li.hide-admin-ui > a > img {
+  display:inline-block;
+  height:13px;
+  width:auto;
+}
+
+
+/* Show UI icon */
+div.show-admin-ui {
   display:none;
 }
 
-html.override_admin_style div.hidden-admin-ui-indicator {
+html.override_admin_style div.show-admin-ui {
   display:block;
   z-index:12000; 
   cursor:pointer;
   position:fixed;
-  top:6px;
-  right:6px;
-  width:23px;
-  height:23px;
-  line-height:23px;
-  font-size:16px;
-  text-align:center;
-  border-radius:50%;
-  background:rgba(56,171,44,0.8);
-  color:rgba(255,255,255,0.8);
+  top:0;
+  left:0;
+  padding:8px;
+  font-size:13px;
+  line-height:13px;
+  color:rgba(221,221,221,0.8);
   -webkit-animation:2s infinite indicator-pulse;
-  animation:3s infinite indicator-pulse;
+  animation:2s infinite indicator-pulse;
 }
 
-html.override_admin_style div.hidden-admin-ui-indicator:before {
-  content:"\f2bd";
-  display:inline;
-  font-family:FontAwesome;
+html.override_admin_style div.show-admin-ui:hover {
+  background:rgba(60,60,60,0.5);
 }
 
+html.override_admin_style div.show-admin-ui > img {
+  display:inline-block;
+  height:13px;
+  width:auto;
+}
 
 @media print {
-  html.override_admin_style div.hidden-admin-ui-indicator { display:none; }
+  html.override_admin_style div.show-admin-ui { display:none; }
 }
 
 @keyframes indicator-pulse {
-  0%    { background:rgba(56,171,44,0.8); color:rgba(255,255,255,0.8); }
-  24%   { background:rgba(220,81,53,0);   color:rgba(255,255,255,0); }
-  26%   { background:rgba(220,81,53,0);   color:rgba(255,255,255,0); }
-  50%   { background:rgba(220,81,53,0.8); color:rgba(255,255,255,0.8); }
-  74%   { background:rgba(220,81,53,0);   color:rgba(255,255,255,0); }
-  76%   { background:rgba(56,171,44,0);   color:rgba(255,255,255,0); }
-  100%  { background:rgba(56,171,44,0.8); color:rgba(255,255,255,0.8); }
+  0%    { color:rgba(221,221,221,0.85); }
+  50%   { color:rgba(60,60,60,0.85); }
+  100%  { color:rgba(221,221,221,0.85); }
 }
 
 @-webkit-keyframes indicator-pulse {
-  0%    { background:rgba(56,171,44,0.8); color:rgba(255,255,255,0.8); }
-  24%   { background:rgba(220,81,53,0);   color:rgba(255,255,255,0); }
-  26%   { background:rgba(220,81,53,0);   color:rgba(255,255,255,0); }
-  50%   { background:rgba(220,81,53,0.8); color:rgba(255,255,255,0.8); }
-  74%   { background:rgba(220,81,53,0);   color:rgba(255,255,255,0); }
-  76%   { background:rgba(56,171,44,0);   color:rgba(255,255,255,0); }
-  100%  { background:rgba(56,171,44,0.8); color:rgba(255,255,255,0.8); }
+  0%    { color:rgba(221,221,221,0.85); }
+  50%   { color:rgba(60,60,60,0.85); }
+  100%  { color:rgba(221,221,221,0.85); }
 }
